# TLX

./: .gitignore  README.md  go.mod  go.sum  main.go  package.json  tsconfig.base.json  tsconfig.json
apps/cli/: README.md  package.json  tsconfig.json
apps/cli/src/: index.ts
apps/ui/: package.json  tsconfig.json
apps/ui/app/: globals.css  layout.tsx  page.tsx
apps/worker-node/: README.md  package.json
apps/worker-node/src/: index.ts  worker.ts
cmd/: root.go  scan.go
cmd/tlx/: main.go
docs/: TLX.md  contracts.md  raw_srs.md  srs.md
docs/context/: current-dashboard-contracts.md  current-go-host-worker-api.md  current-playwright-scanner.md  current-project.md  current-services.md  current-ui-analyzer.md  phase1-completed.md  srs-phase2-make.md
docs/errors/: issues.md
docs/plan/: overall.md  upcoming-phases.md
internal/browser/: browser.go
internal/cli/: cli.go
internal/config/: config.go  config_test.go  errors.go
internal/health/: health.go  health_test.go
internal/output/: output.go
internal/process/: errors.go  kill_unix.go  kill_windows.go  run.go
internal/worker/: process_group_unix.go  process_group_windows.go  worker.go  worker_test.go
tlx-cloud/: pyproject.toml
tlx-cloud/app/: main.py
tlx-cloud/app/core/: minio_config.py  security.py
tlx-cloud/app/db/: base.py
tlx-cloud/app/domains/auth/: model.py
tlx-cloud/app/domains/users/: mappers.py  model.py  router.py  schemas.py  services.py
tlx-cloud/app/helpers/: bases.py  deps.py  exception_handler.py  login_manager.py  paging.py
ui/: package-lock.json
(+67 files in other folders)
